# prettyplot

./: .gitignore  README.md  pyproject.toml  setup.py
prettyplot/: config.py  utils.py
src/prettyplot/: __init__.py  bar.py  config.py  line.py  roc.py  utils.py
tests/: test.ipynb
